# workflows

./: .gitlint  Dockerfile  Makefile  README.md  airflow.cfg  connections.json  docker-compose.yaml  known_hosts  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml  pull-request-main.yml  push-main.yml  test-and-build.yml
country-share/: countries.py  gdp.csv  gdp_2022.csv  main.py  requirements.txt  utils.py
country-share/tests/units/: test_utils.py
country-share/tests/units/data/: record.json
dags/aps/: aps_api_client.py  aps_process_file.py  aps_pull_api.py  parser.py  utils.py  xml_parser.py
dags/clean/: cleanup_logs.py
dags/common/: cleanup.py  constants.py  countries_mapping.py  enhancer.py  enricher.py  exceptions.py  ftp_service.py  pull_ftp.py  request.py  scoap3_s3.py  sftp_service.py  tmp  utils.py
dags/common/parsing/: generic_parsing.py  json_extractors.py  xml_extractors.py
dags/elsevier/: elsevier_file_processing.py  elsevier_pull_ftp.py  elsevier_pull_sftp.py  metadata_parser.py  parser.py  repository.py  trigger_file_processing.py
dags/hindawi/: hindawi_api_client.py  hindawi_file_processing.py  hindawi_pull_api.py  parser.py  utils.py  xml_extractors.py
dags/inspire_utils/: date.py  inspire_utils.py
dags/iop/: dag_pull_ftp.py  iop_process_file.py  iop_pull_sftp.py  parser.py  repository.py  sftp_service.py
dags/jagiellonian/: jagiellonian_process_file.py  jagiellonian_pull_api.py  parser.py
dags/oup/: ftp_service.py  oup_process_file.py  oup_pull_ftp.py  parser.py  repository.py
dags/schemas/: enhancement_schema.py  generic_parser_schema.py  parser_schema.py
dags/springer/: dag_process_file.py  dag_pull_ftp.py  parser.py  repository.py  sftp_service.py  springer_process_file.py  springer_pull_sftp.py
documentation/APS/: aps_fields_mapping.md
documentation/Hindawi/: README.md
documentation/IOP/: README.md
plugins/: calendar_view.py
plugins/templates/: calendar.html
scripts/gitlint_rules/: rules.py
ssh/user_keys/: fake_key  fake_key.pub
tests/integration/aps/: test_aps_file_harvesting_dag.py  test_aps_file_processing.py  test_aps_files_harvesting_methods.py  test_utils.py
tests/integration/aps/cassettes/: test_dag_run.yaml
tests/integration/aps/data/: expected_json_output.json
tests/integration/common/: test_common.py  test_enricher.py  test_rest_api_service.py  test_scoap3_s3.py
tests/integration/common/cassettes/: download_pdf.yaml  head_request_s3_file.yaml  head_request_s3_non_existent_file.yaml  test_get_arxiv_categories_arxiv_id.yaml  test_get_arxiv_categories_doi.yaml  test_get_arxiv_categories_title.yaml
tests/integration/elsevier/: test_elsevier_dag_pull_sftp.py  test_files_harvesting.py
tests/integration/iop/: test_dag_pull_ftp.py  test_dag_pull_sftp.py  test_file_harvesting_methods.py  test_iop_dag_process_file.py  test_iop_dag_pull_sftp.py  test_repo.py
tests/integration/jagiellonian/: test_integration_jagiellonian_pull_api.py  test_jagiellonian_process_file.py
tests/integration/oup/: test_oup_dag_process_file.py  test_oup_dag_pull_ftp.py  test_oup_dag_pull_sftp.py  test_oup_files_harvesting_methods.py  test_oup_pull_ftp.py  test_oup_pull_ftp_dag.py  test_oup_sftp.py
tests/integration/springer/: test_dag_process_file.py  test_dag_pull_ftp.py  test_springer_dag_process_file.py  test_springer_dag_pull_sftp.py  test_springer_files_harvesting_methods.py
tests/scoap3/integration/aps/: test_utils.py
tests/test_dag/: test_dag.py
tests/units/aps/: test_aps_api_client.py  test_aps_file_processing.py  test_aps_parser.py  test_aps_parser_xml.py  test_aps_repository.py  test_trigger_files_processing.py  test_utils.py
tests/units/aps/test_aps_parser_xml/: real.xml
tests/units/clean/: test_clean.py
tests/units/common/: test_cleanup.py  test_common.py  test_common_utils.py  test_enhancer.py  test_enricher.py  test_parse_country_from_value.py  test_request.py
tests/units/common/data/: cleaned_html.html  expected_xml_without_namespaces  test.html  test_parse_country_from_value.json  xml_with_namespaces.xml
tests/units/common/parsing/: test_parser.py
tests/units/elsevier/: test_elsevier_parser.py  test_files_proccessing_tirgger.py  test_metadata_parser.py  test_migrate_files.py
tests/units/elsevier/cassettes/: test_elsevier_validate_record.yaml
tests/units/elsevier/data/: expected_authors.json  main-3.xml  multiple_author_groups.xml  no_namespaces_expected.json  wrong_namespaces.xml
tests/units/hindawi/: test_hindawi_api_client.py  test_hindawi_enhance.py  test_hindawi_repository.py  test_hindawi_utils.py
tests/units/iop/: test_iop_parser.py  test_iop_repository.py  test_iop_sftp.py
tests/units/iop/data/: all_fields_wrong_values.xml  just_with_required_fields.xml  without_arxiv.xml  without_doi.xml
tests/units/iop/test_parser/: test_abstract_and_titles.py  test_arxiv_eprints.py  test_authors.py  test_dois.py  test_get_related_article_doi.py  test_journal_doctype.py  test_page_nr.py
tests/units/iop/test_parser/data/: affiliations_just_with_ref.xml  author_without_affiliations.xml  author_without_name.xml  author_without_surname.xml  journal_type_cerrection.xml  just_with_collab.xml  string_page_nr.xml  with_collab_and_author.xml  with_empty_title.xml  with_version_arxiv_article.xml  without_abstract.xml  without_authors.xml  without_doi.xml  without_journal_doctype.xml  (+1 more)
tests/units/jagiellonian/: test_jagiellonian_parser.py  test_unit_jagiellonian_pull_api.py
tests/units/jagiellonian/data/: json_response_content.json
tests/units/oup/: test_oup_parser.py  test_oup_repository.py  test_oup_sftp.py  test_parser.py
tests/units/oup/data/: ptac108.xml  ptac113.xml  ptac120.xml  ror_article.xml
tests/units/schemas/: test_enhancement_schema.py  test_generic_parser_schema.py  test_parser_schema.py
tests/units/springer/: test_parser.py  test_springer_repository.py
tests/units/springer/test_parser/: country_issue.xml
tests/units/utils/: test_parse_without_names_spaces.py
(+6 files in other folders)
