[tool.poetry]
name = "workflows"
version = "0.1.0"
description = ""
authors = ["ErnestaP <ernesta.petraityte@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^1.2.0"
babel = "^2.12.1"
configupdater = "^3.1.1"
deprecated = "^1.2.13"
gitpython = "^3.1.31"
heapdict = "^1.0.1"
jpype1 = "^1.4.1"
jaydebeapi = "^1.2.3"
markdown = "^3.4.3"
pygithub = "^1.58.1"
pyjwt = "^2.6.0"
pynacl = "^1.5.0"
pygments = "^2.15.1"
sqlalchemy-jsonfield = "^1.0.1.post0"
sqlalchemy-utils = "^0.41.0"
sqlalchemy = "^2.0.11"
secretstorage = "^3.3.3"
unidecode = "^1.3.6"
adal = "^1.2.7"
aiofiles = "^23.1.0"
alabaster = "^0.7.13"
aliyun-python-sdk-core = "^2.13.36"
aliyun-python-sdk-kms = "^2.16.0"
amqp = "^5.1.1"
analytics-python = "^1.4.post1"
ansiwrap = "^0.8.4"
anyio = "^3.6.2"
apache-airflow-providers-common-sql = "^1.4.0"
apache-airflow-providers-ftp = "^3.3.1"
apache-airflow-providers-imap = "^3.1.1"
apache-airflow-providers-microsoft-psrp = "^2.2.0"
apache-airflow-providers-sqlite = "^3.3.2"
apispec = "^6.3.0"
appdirs = "^1.4.4"
argcomplete = "^3.0.8"
arrow = "^1.2.3"
asana = "^3.2.1"
asgiref = "^3.6.0"
asn1crypto = "^1.5.1"
asttokens = "^2.2.1"
async-timeout = "^4.0.2"
asynctest = "^0.13.0"
atlasclient = "^1.0.0"
atlassian-python-api = "^3.36.0"
attrs = "^23.1.0"
aws-sam-translator = "^1.65.0"
aws-xray-sdk = "^2.12.0"
azure-batch = "^13.0.0"
azure-common = "^1.1.28"
azure-core = "^1.26.4"
azure-cosmos = "^4.3.1"
azure-datalake-store = "^0.0.52"
azure-identity = "^1.12.0"
azure-keyvault-secrets = "^4.7.0"
azure-mgmt-containerinstance = "^10.1.0"
azure-mgmt-core = "^1.4.0"
azure-mgmt-datafactory = "^3.1.0"
azure-mgmt-datalake-nspkg = "^3.0.1"
azure-mgmt-datalake-store = "^0.5.0"
azure-mgmt-nspkg = "^3.0.2"
azure-mgmt-resource = "^23.0.0"
azure-nspkg = "^3.0.2"
azure-servicebus = "^7.9.0"
azure-storage-blob = "^12.16.0"
azure-storage-common = "^2.1.0"
azure-storage-file-datalake = "^12.11.0"
azure-storage-file = "^2.1.0"
azure-synapse-spark = "^0.7.0"
backcall = "^0.2.0"
bcrypt = "^4.0.1"
beautifulsoup4 = "^4.12.2"
billiard = "^4.1.0"
black = "^23.3.0"
bleach = "^6.0.0"
blinker = "^1.6.2"
boto3 = "^1.26.121"
boto = "^2.49.0"
botocore = "^1.29.121"
cachelib = "^0.10.2"
cachetools = "^5.3.0"
cassandra-driver = "^3.26.0"
cattrs = "^22.2.0"
certifi = "^2022.12.7"
cffi = "^1.15.1"
cfgv = "^3.3.1"
chardet = "^5.1.0"
charset-normalizer = "^3.1.0"
checksumdir = "^1.2.0"
click-default-group = "^1.2.2"
click-didyoumean = "^0.3.0"
click-plugins = "^1.1.1"
click-repl = "^0.2.0"
click = "^8.1.3"
cloudant = "^2.15.0"
cloudpickle = "^2.2.1"
colorama = "^0.4.6"
colorlog = "^6.7.0"
coverage = "^7.2.3"
cron-descriptor = "^1.2.35"
croniter = "^1.3.14"
cryptography = "^40.0.2"
curlify = "^2.2.1"
datadog = "^0.45.0"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
dill = "^0.3.6"
distlib = "^0.3.6"
dnspython = "^2.3.0"
docker = "^6.0.1"
docutils = "^0.19"
ecdsa = "^0.18.0"
elasticsearch-dsl = "^7.4.1"
email-validator = "^2.0.0.post2"
entrypoints = "^0.4"
et-xmlfile = "^1.1.0"
eventlet = "^0.33.3"
exceptiongroup = "^1.1.1"
execnet = "^1.9.0"
executing = "^1.2.0"
fastavro = "^1.7.3"
fasteners = "^0.18"
fastjsonschema = "^2.16.3"
filelock = "^3.12.0"
fissix = "^21.11.13"
flake8-colors = "^0.1.9"
flake8-implicit-str-concat = "^0.4.0"
flaky = "^3.7.0"
freezegun = "^1.2.2"
fsspec = "^2023.4.0"
gevent = "^22.10.2"
gitdb = "^4.0.10"
google-api-core = "^2.11.0"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
google-auth = "^2.17.3"
google-cloud-aiplatform = "^1.24.1"
google-cloud-appengine-logging = "^1.3.0"
google-cloud-audit-log = "^0.2.5"
google-cloud-automl = "^2.11.1"
google-cloud-bigquery-datatransfer = "^3.11.1"
google-cloud-bigquery-storage = "^2.19.1"
google-cloud-bigquery = "^3.10.0"
google-cloud-bigtable = "^2.17.0"
google-cloud-build = "^3.16.0"
google-cloud-compute = "^1.11.0"
google-cloud-container = "^2.21.0"
google-cloud-core = "^2.3.2"
google-cloud-datacatalog = "^3.12.0"
google-cloud-dataflow-client = "^0.8.3"
google-cloud-dataform = "^0.5.1"
google-cloud-dataplex = "^1.4.3"
google-cloud-dataproc-metastore = "^1.11.0"
google-cloud-dataproc = "^5.4.1"
google-cloud-dlp = "^3.12.1"
google-cloud-kms = "^2.16.1"
google-cloud-language = "^2.9.1"
google-cloud-logging = "^3.5.0"
google-cloud-memcache = "^1.7.1"
google-cloud-monitoring = "^2.14.2"
google-cloud-orchestration-airflow = "^1.7.1"
google-cloud-os-login = "^2.9.1"
google-cloud-pubsub = "^2.16.0"
google-cloud-redis = "^2.12.1"
google-cloud-resource-manager = "^1.10.0"
google-cloud-secret-manager = "^2.16.1"
google-cloud-spanner = "^3.32.0"
google-cloud-speech = "^2.19.0"
google-cloud-storage = "^2.8.0"
google-cloud-tasks = "^2.13.1"
google-cloud-texttospeech = "^2.14.1"
google-cloud-translate = "^3.11.1"
google-cloud-videointelligence = "^2.11.1"
google-cloud-vision = "^3.4.1"
google-cloud-workflows = "^1.10.1"
google-crc32c = "^1.5.0"
google-resumable-media = "^2.5.0"
googleapis-common-protos = "^1.59.0"
graphql-core = "^3.2.3"
graphviz = "^0.20.1"
greenlet = "^2.0.2"
grpc-google-iam-v1 = "^0.12.6"
grpcio-gcp = "^0.2.2"
grpcio-status = "^1.54.0"
grpcio = "^1.54.0"
gssapi = "^1.8.2"
gunicorn = "^20.1.0"
h11 = "^0.14.0"
hmsclient = "^0.1.1"
httpcore = "^0.17.0"
httplib2 = "^0.22.0"
httpx = "^0.24.0"
humanize = "^4.6.0"
identify = "^2.5.23"
idna = "^3.4"
imagesize = "^1.4.1"
importlib-metadata = "^6.6.0"
incremental = "^22.10.0"
inflection = "^0.5.1"
influxdb-client = "^1.36.1"
iniconfig = "^2.0.0"
ipdb = "^0.13.13"
ipython = "^8.12.0"
isodate = "^0.6.1"
isort = "^5.12.0"
itsdangerous = "^2.1.2"
jaraco-classes = "^3.2.3"
jedi = "^0.18.2"
jeepney = "^0.8.0"
jira = "^3.5.0"
jschema-to-python = "^1.2.3"
jsondiff = "^2.0.0"
jsonpatch = "^1.32"
jsonpath-ng = "^1.5.3"
jsonpickle = "^3.0.1"
jsonpointer = "^2.3"
jsonschema = "^4.17.3"
junit-xml = "^1.9"
jupyter-core = "^5.3.0"
keyring = "^23.13.1"
kombu = "^5.2.4"
kylinpy = "^2.8.4"
ldap3 = "^2.9.1"
linkify-it-py = "^2.0.0"
locket = "^1.0.0"
lockfile = "^0.12.2"
looker-sdk = "^23.6.0"
lxml = "^4.9.2"
lz4 = "^4.3.2"
markdown-it-py = "^2.2.0"
marshmallow-enum = "^1.5.1"
marshmallow-oneofschema = "^3.0.1"
marshmallow-sqlalchemy = "^0.29.0"
marshmallow = "^3.19.0"
matplotlib-inline = "^0.1.6"
mccabe = "^0.7.0"
mdit-py-plugins = "^0.3.5"
mdurl = "^0.1.2"
monotonic = "^1.6"
more-itertools = "^9.1.0"
moreorless = "^0.4.0"
mpmath = "^1.3.0"
msal-extensions = "^1.0.0"
msal = "^1.22.0"
msrest = "^0.7.1"
msrestazure = "^0.6.4"
mypy-boto3-appflow = "^1.26.119"
mypy-boto3-rds = "^1.26.116"
mypy-boto3-redshift-data = "^1.26.109"
mypy-extensions = "^1.0.0"
mypy = "^1.2.0"
nbformat = "^5.8.0"
neo4j = "^5.7.0"
networkx = "^3.1"
nodeenv = "^1.7.0"
oauthlib = "^3.2.2"
objsize = "^0.6.1"
openapi-schema-validator = "^0.4.4"
openpyxl = "^3.1.2"
opsgenie-sdk = "^2.1.5"
oracledb = "^1.3.1"
oscrypto = "^1.3.0"
packaging = "^23.1"
parameterized = "^0.9.0"
paramiko = "^3.1.0"
parso = "^0.8.3"
partd = "^1.4.0"
pathable = "^0.4.3"
pathspec = "^0.11.1"
pbr = "^5.11.1"
pdpyras = "^4.5.2"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
